--- a/public/login.css
+++ b/public/login.css
@@ -5,6 +5,9 @@
     scroll-behavior: smooth;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Astloch:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
 :root {
     --primary-color: #4052D6;
     --secondary-color: #D99EC2;
@@ -12,8 +15,144 @@
     --light-default: #f9f9f9;
 }
 
-.container { 
+html,
+body {
+    height: 100%;
+    font-family: 'Josefin Sans', sans-serif;
+    color: var(--light-default);
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #000000;
+    background-image: url(./../media/bglogin.jpg);
+    background-size: cover;
+}
+
+.container {
+    background: linear-gradient(to top, var(--dark-default), transparent);
+    border-radius: 10px;
+
+    height: 640px;
+    width: 350px;
+    text-align: center;
+}
+
+.container img {
+    width: 100%;
+    height: 100%;
+}
+
+.login-gif {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+
+    border-radius: 0 0 20px 20px;
+    transform: scaleY(0.8);
+}
+
+.container span {
+    color: var(--secondary-color);
+}
+
+.container_title {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    font-family: 'Astloch', cursive;
+    color: var(--light-default);
+    text-align: center;
+    margin-bottom: -6px;
+    position: relative;
+    z-index: 1;
+}
+
+.container_title h1 {
+    margin: 0;
+    line-height: 1.1;
+}
+
+form {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.campo {
+    position: relative;
+    margin-bottom: 12px;
+}
+
+.campo i {
+    position: absolute;
+    top: 37%;
+    left: 10px;
+    transform: translateY(-50%);
+    color: var(--secondary-color);
+    font-size: 14px;
+}
+
+.campo input {
+    width: 100%;
+    padding: 8px 8px 8px 35px;
+    border: 1px solid var(--secondary-color);
+    border-radius: 5px;
+    background-color: var(--dark-default);
+    color: var(--light-default);
+    font-size: 14px;
+}
+
+.campo input::placeholder {
+    color: var(--light-default);
+    font-size: 13px;
+}
+
+input:focus {
+    transition: 0.3s ease-in-out;
+    outline: none;
+    border-color: var(--light-default);
+}
+
+/* botão mais estreito que os inputs */
+button {
+    width: 70%;
+    /* menor que os campos */
+    padding: 8px;
+    background-color: var(--secondary-color);
+    border: none;
+    border-radius: 8px;
+    color: var(--dark-default);
+    font-size: 20px;
+    font-family: "Astloch", system-ui;
+    font-weight: 400;
+    font-style: normal;
+
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out, color 0.4s ease-in-out;
+    margin: 10px auto 15px auto;
+    display: block;
+    /* pra permitir centralizar */
+}
+
+button:hover {
+    background-color: var(--dark-default);
+    color: var(--light-default);
+}
+
+.container a {
+    margin-top: 10px;
+    color: var(--secondary-color);
+    cursor: pointer;
+    text-decoration: none;
+    transition: 0.2s ease;
+    font-size: 14px;
+    margin-bottom: 20px;
+    font-family: "Astloch", system-ui;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.container a:hover {
+    color: var(--light-default);
 }
